# batch-sim

./: .gitignore  .gitignore.tmp  README.md  brokenCase.sh  pyproject.toml
.claude/commands/: epics.md
batch_sim/: __main__.py  experiment_hybrid.py  experiment_runner.py
batch_sim/core/: config_loader.py  engine.py  schemas.py  tier_preflight.py
batch_sim/generator/: event_list.py  job_spec.py  sampler.py
batch_sim/metrics/: aggregator.py  collector.py  utilization_sampler.py  visualize.py
configs/: demo_centroids.yaml  demo_k8splus_scheduler.yaml  demo_k8splus_schedulerB.yaml  demo_k8splus_schedulerC.yaml  example_per_stage_io_wait.yaml  experiment_hybrid.yaml  experiment_jch01.yaml  instance_registry.yaml  jch_batch_scheduler.yaml  jch_centroids_v01.yaml  jch_centroids_v02.yaml  jch_centroids_v03.yaml  jch_centroids_v04.yaml  jch_centroids_v04B.yaml  jch_instance_registry_01.yaml  jch_instance_registry_02.yaml  jch_instance_registry_03.yaml  jch_k8s_scheduler.yaml  jch_k8splus_scheduler.yaml  jch_policy_reference.yaml  k8splus_reference.yaml  reference_centroids.yaml  reference_centroids_24h.yaml  reference_centroids_v2.yaml  reference_centroids_v3.yaml  scheduler_reference.yaml  teeny_centroids.yaml  tiny_centroids.yaml
docs/: COMPARISON_DESIGN.md  CPU_MODELING.md  NEXT_STEPS.md  NODE_LIFECYCLE_MODELING.md  backlog_stories.md  config_reference.md  executive_summary.md  presentation.html
scripts/: generate_node_timelines.py  generate_utilization_charts.py  inspect_workload.py  reproduce_all.sh
tests/: conftest.py  test_full_suite.py
(+53 files in other folders)
