[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batch-sim"
version = "0.1.0"
description = "Discrete-event simulation comparing AWS Batch vs K8S/OKD batch compute scheduling"
requires-python = ">=3.11"
dependencies = [
    "simpy>=4.1",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pydantic>=2.6",
    "rich>=13.7",
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
batch-sim = "batch_sim.__main__:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["batch_sim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
